# Heizer

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
IO_broker_JS/: * ioBroker Script: Heizer Orchestrator (ESP32 <-> ioBroker)  01_Heizer_Decision.js  02_Heizer_Mapper.js  03_Heizer_Feedback.js  MIGRATION.md
components/TFT_eSPI/: User_Setup.h
components/TFT_eSPI/TFT_Drivers/: ST7789_Defines.h  ST7789_Init.h  ST7789_Rotation.h
components/arduino/: installed.json  platform.txt
components/arduino/cores/esp32/: core_version.h  esp32-hal-adc.c  esp32-hal-adc.h
main/: CMakeLists.txt  display_tft.cpp  display_tft.h  log_wrap_compat.c  main.c
